// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiContextMenu can pass-through horizontal rule props 1`] = `
<div
  class="euiContextMenu emotion-euiContextMenu"
  style="height: 0px;"
>
  <div
    class="euiContextMenuPanel emotion-euiContextMenuPanel-euiContextMenu__panel"
    tabindex="-1"
  >
    <div
      class="euiContextMenuItem euiContextMenuPanel__title emotion-euiContextMenuItem-m-center-euiContextMenuPanel__title"
      data-test-subj="contextMenuPanelTitle"
    >
      <span
        class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
      >
        Testing separator
      </span>
    </div>
    <div>
      <hr
        class="euiHorizontalRule euiHorizontalRule--half euiHorizontalRule--marginSmall emotion-euiHorizontalRule-half-s"
      />
    </div>
  </div>
</div>
`;

exports[`EuiContextMenu props panels and initialPanelId renders the referenced panel 1`] = `
<div
  class="euiContextMenu emotion-euiContextMenu"
  style="height: 0px;"
>
  <div
    class="euiContextMenuPanel emotion-euiContextMenuPanel-euiContextMenu__panel"
    tabindex="-1"
  >
    <button
      class="euiContextMenuItem euiContextMenuPanel__title emotion-euiContextMenuItem-m-center-euiContextMenuPanel__title"
      data-test-subj="contextMenuPanelTitleButton"
      type="button"
    >
      <span
        class="euiContextMenu__icon emotion-euiContextMenu__icon"
        color="inherit"
        data-euiicon-type="arrowLeft"
      />
      <span
        class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
      >
        2
      </span>
    </button>
    <div>
      <div>
        2
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiContextMenu props size m 1`] = `
<div
  class="euiContextMenu emotion-euiContextMenu"
  style="height: 0px;"
>
  <div
    class="euiContextMenuPanel emotion-euiContextMenuPanel-euiContextMenu__panel"
    tabindex="-1"
  >
    <button
      class="euiContextMenuItem euiContextMenuPanel__title emotion-euiContextMenuItem-m-center-euiContextMenuPanel__title"
      data-test-subj="contextMenuPanelTitleButton"
      type="button"
    >
      <span
        class="euiContextMenu__icon emotion-euiContextMenu__icon"
        color="inherit"
        data-euiicon-type="arrowLeft"
      />
      <span
        class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
      >
        2
      </span>
    </button>
    <div>
      <div>
        2
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiContextMenu props size s 1`] = `
<div
  class="euiContextMenu emotion-euiContextMenu"
  style="height: 0px;"
>
  <div
    class="euiContextMenuPanel emotion-euiContextMenuPanel-euiContextMenu__panel"
    tabindex="-1"
  >
    <button
      class="euiContextMenuItem euiContextMenuPanel__title emotion-euiContextMenuItem-m-center-euiContextMenuPanel__title"
      data-test-subj="contextMenuPanelTitleButton"
      type="button"
    >
      <span
        class="euiContextMenu__icon emotion-euiContextMenu__icon"
        color="inherit"
        data-euiicon-type="arrowLeft"
      />
      <span
        class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
      >
        2
      </span>
    </button>
    <div>
      <div>
        2
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiContextMenu renders 1`] = `
<div
  aria-label="aria-label"
  class="euiContextMenu testClass1 testClass2 emotion-euiContextMenu-euiTestCss"
  data-test-subj="test subject string"
/>
`;

exports[`EuiContextMenu renders isSeparator items 1`] = `
<div
  class="euiContextMenu emotion-euiContextMenu"
  style="height: 0px;"
>
  <div
    class="euiContextMenuPanel emotion-euiContextMenuPanel-euiContextMenu__panel"
    tabindex="-1"
  >
    <div
      class="euiContextMenuItem euiContextMenuPanel__title emotion-euiContextMenuItem-m-center-euiContextMenuPanel__title"
      data-test-subj="contextMenuPanelTitle"
    >
      <span
        class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
      >
        Testing separator
      </span>
    </div>
    <div>
      <div
        class="euiContextMenuItem emotion-euiContextMenuItem-m-center"
      >
        <span
          class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
        >
          Foo
        </span>
      </div>
      <hr
        class="euiHorizontalRule euiHorizontalRule--full emotion-euiHorizontalRule-full"
      />
      <div
        class="euiContextMenuItem emotion-euiContextMenuItem-m-center"
      >
        <span
          class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
        >
          Bar
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiContextMenu renders panels with JSX 1`] = `
<div
  class="euiContextMenu emotion-euiContextMenu"
  style="height: 0px;"
>
  <div
    class="euiContextMenuPanel emotion-euiContextMenuPanel-euiContextMenu__panel"
    tabindex="-1"
  >
    <div
      class="euiContextMenuItem euiContextMenuPanel__title emotion-euiContextMenuItem-m-center-euiContextMenuPanel__title"
      data-test-subj="contextMenuPanelTitle"
    >
      <span
        class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
      >
        3
      </span>
    </div>
    <div>
      <div
        class="euiContextMenuItem emotion-euiContextMenuItem-m-center"
      >
        <span
          class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
        >
          <span
            style="color: tomato;"
          >
            foo
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
